# Developer_Calculator

./: .gitignore  CMakeLists.txt  Developer_Calculator_zh_CN.ts  README.md  calcmath.cpp  calctool.cpp  calctool.h  dev_calc_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proj_conf.h
inc/: calcmath.h  calctool.h  proj_conf.h
src/: calcmath.cpp  calctool.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
